Added support and invite commands

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 TOKEN = "your_token_here"
+INVITE_LINK = "invite_link_for_your_bot"
+SUPPORT_LINK = "suppport_link_for_your_server"
+
+# you must have valid links set up, otherwise the bot will throw an error about HTTPException
